--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -24,8 +24,11 @@
         data-logo_alignment="left">
     </div>
 
-    
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <button id="google_signout">
+        SignOut
+    </button>
+
+
 
 
     <script>
@@ -54,13 +57,34 @@
                 .then(resp => resp.json())
                 .then(resp => {
                     console.log(resp)
+                    localStorage.setItem('email', resp.user.email)
                 })
                 .catch(console.warn);
+        }
 
+
+
+
+        const button = document.getElementById('google_signout');
+
+        button.onclick = () => {
+
+            console.log(google.accounts.id),
+
+            google.account.id.disableAutoSelect(),
+
+            google.accounts.id.revoke(localStorage.getItem('email'), done =>{
+                localStorage.clear();
+                location.reload();
+            })
         }
     </script>
 
 
+
+
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 
 </body>
 </html>
