--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -6,7 +6,7 @@
     <title>Google Sign-In</title>
 </head>
 <body>
-    <!-- Google sign-in (cloud identity), pero no tengo cuenta-->
+    <!-- Google sign-in (cloud identity)-->
     <h1>Google Sign-in</h1>
     <hr>
 
